Zadanie 1 update 2