@@ -1,89 +1,105 @@
 package org.example;
 
-import static org.junit.jupiter.api.Assertions.*;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestFactory;
+
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
-import java.util.stream.Stream;
 
-public class GradebookTest {
+/**
+ * Test class for Gradebook logic.
+ */
+public final class GradebookTest {
+
     private Gradebook gradebook;
+    private final double gradeFive = 5.0;
+    private final double gradeFour = 4.0;
+    private final double gradeThree = 3.0;
+    private final double gradeThreeHalf = 3.5;
 
+    /**
+     * Sets up the test environment.
+     */
     @BeforeEach
     public void setUp() {
         gradebook = new Gradebook();
     }
 
+    /**
+     * Tests adding a subject.
+     */
     @Test
     public void testAddSubject() {
-        gradebook.addSubject("Physics");
-        assertEquals(List.of("Physics"), gradebook.getSubjects());
-    }
-
-    @Test
-    public void testAddGradeToSubject() {
         gradebook.addSubject("Math");
-        gradebook.addGrade("Math", 5.0);
-        assertEquals(List.of(5.0), gradebook.getGrades().get("Math"));
+        Assertions.assertTrue(gradebook.getSubjects().contains("Math"));
     }
 
+    /**
+     * Tests getting all subjects.
+     */
+    @Test
+    public void testGetSubjects() {
+        gradebook.addSubject("Math");
+        gradebook.addSubject("Physics");
+        List<String> subjects = gradebook.getSubjects();
+        Assertions.assertEquals(2, subjects.size());
+    }
+
+    /**
+     * Tests adding a grade to a subject.
+     */
+    @Test
+    public void testAddGrade() {
+        gradebook.addSubject("Math");
+        gradebook.addGrade("Math", gradeFive);
+        Assertions.assertEquals(gradeFive, gradebook.calcAvgForSubject("Math"));
+    }
+
+    /**
+     * Factory for dynamic tests.
+     * @return collection of dynamic tests.
+     */
     @TestFactory
-    Stream<DynamicTest> dynamicTestsForSubjects() {
-        List<String> testSubjects = List.of("Math", "Chemistry", "Biology");
-        testSubjects.forEach(gradebook::addSubject);
-
-        return gradebook.getSubjects().stream()
-                .map(subject -> DynamicTest.dynamicTest("Test for subject: " + subject, () -> {
-                    gradebook.addGrade(subject, 4.0);
-                    gradebook.addGrade(subject, 3.0);
-                    assertEquals(2, gradebook.getGrades().get(subject).size());
-                    assertEquals(3.5, gradebook.calcAvgForSubject(subject));
-                }));
+    public Collection<DynamicTest> dynamicTestsForSubjects() {
+        return Arrays.asList(
+                DynamicTest.dynamicTest("Test Math Avg", () -> {
+                    gradebook.addSubject("Math");
+                    gradebook.addGrade("Math", gradeFour);
+                    gradebook.addGrade("Math", gradeThree);
+                    Assertions.assertEquals(gradeThreeHalf,
+                            gradebook.calcAvgForSubject("Math"));
+                }),
+                DynamicTest.dynamicTest("Test Physics Avg", () -> {
+                    gradebook.addSubject("Physics");
+                    gradebook.addGrade("Physics", gradeFour);
+                    Assertions.assertEquals(gradeFour,
+                            gradebook.calcAvgForSubject("Physics"));
+                })
+        );
     }
 
-    @Test
-    public void testCalcAvgForAllSubjects() {
-        gradebook.addSubject("Math");
-        gradebook.addSubject("Physics");
-        gradebook.addGrade("Math", 4.0);
-        gradebook.addGrade("Physics", 2.0);
-        assertEquals(3.0, gradebook.calcAvgForAllSubjects());
-    }
-
+    /**
+     * Tests exception for non-existent subject.
+     */
     @Test
     public void testAddGradeToNonExistentSubject() {
-        assertThrows(IllegalArgumentException.class, () -> gradebook.addGrade("Geography", 4.0));
+        Assertions.assertThrows(IllegalArgumentException.class, () -> {
+            gradebook.addGrade("Bio", gradeFive);
+        });
     }
 
+    /**
+     * Tests average for subject with no grades.
+     */
     @Test
-    public void testHistoryExclusion() {
-        gradebook.addSubject("History");
-        gradebook.addGrade("History", 5.0);
-        assertTrue(gradebook.getGrades().get("History").isEmpty());
-        assertThrows(IllegalArgumentException.class, () -> gradebook.calcAvgForSubject("History"));
-    }
-
-    @Test
-    public void testAverageFromEmptyGradebook() {
-        assertThrows(IllegalArgumentException.class, () -> gradebook.calcAvgForAllSubjects());
-    }
-
-    @Test
-    public void testDuplicateSubjectPrevention() {
-        gradebook.addSubject("Math");
-        gradebook.addGrade("Math", 5.0);
-        gradebook.addSubject("Math");
-        assertEquals(1, gradebook.getSubjects().size());
-        assertEquals(1, gradebook.getGrades().get("Math").size());
-    }
-
-    @Test
-    public void testEncapsulationOfLists() {
-        gradebook.addSubject("Math");
-        List<String> subjects = gradebook.getSubjects();
-        subjects.add("IT");
-        assertFalse(gradebook.getSubjects().contains("IT"));
+    public void testAvgForSubjectWithNoGrades() {
+        gradebook.addSubject("Chemistry");
+        Assertions.assertThrows(IllegalArgumentException.class, () -> {
+            gradebook.calcAvgForSubject("Chemistry");
+        });
     }
 }
